--- a/homework/Day_048_example.ipynb
+++ b/homework/Day_048_example.ipynb
@@ -769,6 +769,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 以下 code 來原作者 ChahatGarg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_all shape : (10000, 40)\n",
+      "Random Forest Best Score 0.996\n",
+      "Random Forest Best Parmas {'max_depth': 3, 'n_estimators': 50}\n",
+      "Random Forest Accuracy 0.9960000000000001\n",
+      "KNN Best Score 0.996\n",
+      "KNN Best Params {'n_neighbors': 3}\n",
+      "KNN Accuracy 0.9960000000000001\n",
+      "SVM Best Score 0.996\n",
+      "SVM Best Params {'C': 1, 'kernel': 'linear'}\n",
+      "SVM Accuracy 0.9960000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV, cross_val_score\n",
+    "from sklearn.mixture import GaussianMixture\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "train_data = pd.read_csv('../data/train.csv',header = None)\n",
+    "train_labels = pd.read_csv('../data/trainLabels.csv',header = None)\n",
+    "test_data =  pd.read_csv('../data/test.csv',header = None)\n",
+    "\n",
+    "import numpy as np # linear algebra\n",
+    "x_all = np.r_[train_data,test_data]\n",
+    "print('x_all shape :',x_all.shape)\n",
+    "\n",
+    "# USING THE GAUSSIAN MIXTURE MODEL \n",
+    "lowest_bic = np.infty\n",
+    "bic = []\n",
+    "n_components_range = range(1, 7)\n",
+    "cv_types = ['spherical', 'tied', 'diag', 'full']\n",
+    "for cv_type in cv_types:\n",
+    "    for n_components in n_components_range:\n",
+    "        gmm = GaussianMixture(n_components=n_components,covariance_type=cv_type)\n",
+    "        gmm.fit(x_all)\n",
+    "        bic.append(gmm.aic(x_all))\n",
+    "        if bic[-1] < lowest_bic:\n",
+    "            lowest_bic = bic[-1]\n",
+    "            best_gmm = gmm\n",
+    "            \n",
+    "best_gmm.fit(x_all)\n",
+    "gmm_train = best_gmm.predict_proba(train_data)\n",
+    "gmm_test = best_gmm.predict_proba(test_data)\n",
+    "\n",
+    "\n",
+    "#Random Forest Classifier\n",
+    "rfc = RandomForestClassifier(random_state=99)\n",
+    "\n",
+    "#USING GRID SEARCH\n",
+    "n_estimators = [10, 50, 100, 200,400]\n",
+    "max_depth = [3, 10, 20, 40]\n",
+    "param_grid = dict(n_estimators=n_estimators,max_depth=max_depth)\n",
+    "\n",
+    "grid_search_rfc = GridSearchCV(estimator=rfc, param_grid=param_grid, cv = 10,scoring='accuracy',n_jobs=-1).fit(gmm_train, train_labels.values.ravel())\n",
+    "rfc_best = grid_search_rfc.best_estimator_\n",
+    "print('Random Forest Best Score',grid_search_rfc.best_score_)\n",
+    "print('Random Forest Best Parmas',grid_search_rfc.best_params_)\n",
+    "print('Random Forest Accuracy',cross_val_score(rfc_best,gmm_train, train_labels.values.ravel(), cv=10).mean())\n",
+    "\n",
+    "#KNN \n",
+    "knn = KNeighborsClassifier()\n",
+    "\n",
+    "#USING GRID SEARCH\n",
+    "n_neighbors=[3,5,6,7,8,9,10]\n",
+    "param_grid = dict(n_neighbors=n_neighbors)\n",
+    "\n",
+    "grid_search_knn = GridSearchCV(estimator=knn, param_grid=param_grid, cv = 10, n_jobs=-1,scoring='accuracy').fit(gmm_train,train_labels.values.ravel())\n",
+    "knn_best = grid_search_knn.best_estimator_\n",
+    "print('KNN Best Score', grid_search_knn.best_score_)\n",
+    "print('KNN Best Params',grid_search_knn.best_params_)\n",
+    "print('KNN Accuracy',cross_val_score(knn_best,gmm_train, train_labels.values.ravel(), cv=10).mean())\n",
+    "\n",
+    "#SVM\n",
+    "svc = SVC()\n",
+    "\n",
+    "#USING GRID SEARCH\n",
+    "parameters = [{'kernel':['linear'],'C':[1,10,100]},\n",
+    "              {'kernel':['rbf'],'C':[1,10,100],'gamma':[0.05,0.0001,0.01,0.001]}]\n",
+    "grid_search_svm = GridSearchCV(estimator=svc, param_grid=parameters, cv = 10, n_jobs=-1,scoring='accuracy').fit(gmm_train, train_labels.values.ravel())\n",
+    "svm_best = grid_search_svm.best_estimator_\n",
+    "print('SVM Best Score',grid_search_svm.best_score_)\n",
+    "print('SVM Best Params',grid_search_svm.best_params_)\n",
+    "print('SVM Accuracy',cross_val_score(svm_best,gmm_train, train_labels.values.ravel(), cv=10).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfc_best.fit(gmm_train,train_labels.values.ravel())\n",
+    "pred  = rfc_best.predict(gmm_test)\n",
+    "rfc_best_pred = pd.DataFrame(pred)\n",
+    "\n",
+    "rfc_best_pred.index += 1\n",
+    "\n",
+    "rfc_best_pred.columns = ['Solution']\n",
+    "rfc_best_pred['Id'] = np.arange(1,rfc_best_pred.shape[0]+1)\n",
+    "rfc_best_pred = rfc_best_pred[['Id', 'Solution']]\n",
+    "\n",
+    "rfc_best_pred.to_csv('Submission_GMM_RFC.csv',index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
