--- a/homework/Day_054_HW.ipynb
+++ b/homework/Day_054_HW.ipynb
@@ -18,6 +18,15 @@
     "ans: 非監督學習的使用時機大多是不清楚資料特性、問題定義、沒有標記的情況,用來理清資料脈絡,然而要評鑑結果的好與壞需要有明確的結果目標,\n",
     "     因此較難以用評價函數 (Metric) 來鑑別好壞"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ps:非監督式學習->就是你得到的資料你沒有任何Ground truth，你只有資料本身\n",
+    "   舉例，我給你一組身高和體重的資料，但我沒有跟你說這組資料哪些是男生哪些是女生。\n",
+    "   我希望你用這組資料分出男生女生，這種時候就是用非監督式學習"
+   ]
   }
  ],
  "metadata": {
