--- a/homework/Day_056_kmean_HW.ipynb
+++ b/homework/Day_056_kmean_HW.ipynb
@@ -266,6 +266,59 @@
    "source": [
     "ans:由分數以即結果來看,分成3,4,5群的結果看起來不錯"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'''\n",
+    "from sklearn.cluster import KMeans\n",
+    "**class sklearn.cluster.KMeans(n_clusters=8, init=’k-means++’, n_init=10, max_iter=300, tol=0.0001, \n",
+    "                             precompute_distances=’auto’, verbose=0, random_state=None, copy_x=True, \n",
+    "                             n_jobs=None, algorithm=’auto’)\n",
+    "'''\n",
+    "\n",
+    "--n_clusters : int, optional, default: 8\n",
+    "               要形成的群數以及要生成的質心數\n",
+    "\n",
+    "--init : {‘k-means++’, ‘random’ or an ndarray}\n",
+    "         'k-means ++'：以智能方式選擇初始聚類中心進行k均值聚類，以加速收斂。有關更多詳細信息，請參閱k_init中的註釋部分。\n",
+    "         'random'：從初始質心的數據中隨機選擇k個觀測值（行）\n",
+    "\n",
+    "--n_init ： int，預設值：10\n",
+    "          使用不同質心種子運行k-means算法的次數\n",
+    "\n",
+    "--max_iter : int, default: 300\n",
+    "             單次運行的k-means算法的最大迭代次數\n",
+    "             \n",
+    "--tol ： float，預設值：1e-4\n",
+    "        收斂時所容許的誤差值\n",
+    "\n",
+    "--precompute_distances : {‘auto’, True, False}\n",
+    "                         預計算距離（更快但需要更多記憶體）。\n",
+    "        'auto'：如果n_samples * n_clusters> 1200萬，請不要預先計算距離。這相當於使用雙精度的每個作業大約100MB的開銷。\n",
+    "        'True'：始終預先計算距離\n",
+    "        'false'：從不預先計算距離\n",
+    "        \n",
+    "--verbose : int, default 0\n",
+    "            詳細模式\n",
+    "\n",
+    "--random_state : int, RandomState instance or None (default)\n",
+    "                 確定質心初始化的隨機數生成。使用int可以使隨機性具有確定性。\n",
+    "                 \n",
+    "--copy_x : boolean, optional\n",
+    "           當預先計算距離時，首先使數據居中在數值上更準確。\n",
+    "           如果copy_x為True（預設值），則不修改原始數據，確保X是C連續的。如果為False，原始數據被修改，並在函數返回之前返回\n",
+    "           \n",
+    "--n_jobs : int or None, optional (default=None)\n",
+    "           The number of jobs to use for the computation. This works by computing each of the n_init runs in parallel.\n",
+    "           \n",
+    "--algorithm : “auto”, “full” or “elkan”, default=”auto”\n",
+    "              K-means algorithm to use. The classical EM-style algorithm is “full”. \n",
+    "              The “elkan” variation is more efficient by using the triangle inequality,\n",
+    "              but currently doesn’t support sparse data. “auto” chooses\n",
+    "              “elkan” for dense data and “full” for sparse data.\n"
+   ]
   }
  ],
  "metadata": {
