--- a/homework/Day_059_HW.ipynb
+++ b/homework/Day_059_HW.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +64,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(537, 64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print the number of unique labels\n",
+    "number_digits = len(np.unique(digits.target))\n",
+    "number_digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(537, 8, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Isolate the `images`\n",
+    "digits_images = digits.images\n",
+    "\n",
+    "# Inspect the shape\n",
+    "print(digits_images.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,6 +137,15 @@
    "outputs": [],
    "source": [
     "centers = [[1, 1], [-1, -1], [1, -1]]\n",
+    "\n",
+    "# sklearn.decomposition.PCA(n_components=None, copy=True, whiten=False)\n",
+    "# n_components: 保留下來的特徵個數, 輸入int，比如 n_components=1，將原始數遽降至一個維度。\n",
+    "#                                 輸入string，比如 n_components='mle'，自動選取特徵個數，使得滿足所要求的方差百分比\n",
+    "# copy：bool，True或者 False，預設 True。\n",
+    "#       表示是否複製保留一份原始數據\n",
+    "# whiten: bool，預設 False\n",
+    "#         使得每個特徵具有相同的方差\n",
+    "\n",
     "pca = decomposition.PCA(n_components=3)"
    ]
   },
